@@ -1,5 +1,7 @@
 2007-06-15  Luca Bruno  <lethalman88@gmail.com>
 
+	* Added floats with tests too
+
 	* syx/syx-memory.c (syx_memory_load_image): do not add extra byte for strings
 	(strndup): added if missing in other environments
 	(memdup): same
